--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -1,9 +1,3 @@
-*,
-*::before,
-*::after {
-	box-sizing: border-box;
-}
-
-body {
-	margin: 0;
-}
+@import url("./globals/font-face.css");
+@import url("./globals/general.css");
+@import url("./globals/root.css");
