--- a/src/assets/styles/utilities/wrapper.css
+++ b/src/assets/styles/utilities/wrapper.css
@@ -1,7 +1,17 @@
 /* Utilities: Wrapper */
 
 .wrapper {
-	display: grid;
-	grid-template-rows: auto 1fr auto;
-	height: 100%;
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
+	min-height: 100dvh;
+}
+
+.wrapper > header,
+.wrapper > footer {
+	flex: 0 0 auto;
+}
+
+.wrapper > main {
+	flex: 0 0 auto;
 }
