--- a/src/assets/styles/general/root.css
+++ b/src/assets/styles/general/root.css
@@ -2,15 +2,11 @@
 
 :root {
 	/* Colors */
-	--clr-neutral-1: #ffffff;
-	--clr-neutral-2: #cccccc;
-	--clr-neutral-3: #b3b3b3;
-	--clr-neutral-4: #989898;
-	--clr-neutral-5: #808080;
-	--clr-neutral-6: #656565;
-	--clr-neutral-7: #4d4d4d;
-	--clr-neutral-8: #333333;
-	--clr-neutral-9: #202020;
+	--clr-white: #ffffff;
+
+	--clr-dark-1: #4d4d4d;
+	--clr-dark-2: #333333;
+	--clr-dark-3: #202020;
 
 	--clr-primary-1: #f99f9f;
 	--clr-primary-2: #f76e6e;
@@ -19,6 +15,8 @@
 	--clr-secondary-1: #3e5284;
 	--clr-secondary-2: #2e3c61;
 	--clr-secondary-3: #1d263d;
+
+	--clr-light-green-1: #b1ceb4;
 
 	/* Fonts family */
 	--ff-common: "Manrope";
@@ -45,7 +43,7 @@
 	--fs-heading-3-xl: 2.625rem;
 
 	--fs-heading-4-md: 1.125rem;
-	--fs-heading-4-lg: 1.5rem;
+	--fs-heading-4-xl: 1.5rem;
 
 	/* Common font weight */
 	--fw-md: 400;
