--- a/src/assets/styles/layout/footer.css
+++ b/src/assets/styles/layout/footer.css
@@ -1,8 +1,8 @@
 /* Layout: Footer */
 
 .footer {
-	background-color: var(--clr-neutral-9);
-	color: var(--clr-neutral-1);
+	background-color: var(--clr-dark-3);
+	color: var(--clr-white);
 }
 
 .footer__container {
