--- a/src/assets/styles/layout/navbar.css
+++ b/src/assets/styles/layout/navbar.css
@@ -13,7 +13,7 @@
 		overflow: hidden;
 		clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
 		background-color: var(--clr-secondary-3);
-		color: var(--clr-neutral-1);
+		color: var(--clr-white);
 		transition: all var(--transition-md);
 	}
 
