--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -1,6 +1,7 @@
 /* Vendors */
 
 @import url("@splidejs/splide/css/core");
+@import url("@fancyapps/ui/dist/fancybox/fancybox.css");
 
 /* General */
 
@@ -16,6 +17,7 @@
 @import url("./components/button.css");
 @import url("./components/slider-button.css");
 @import url("./components/input.css");
+@import url("./components/bread-crumbs.css");
 @import url("./components/service-card.css");
 @import url("./components/direction-card.css");
 @import url("./components/case-card.css");
@@ -36,6 +38,9 @@
 @import url("./layout/callback-section.css");
 @import url("./layout/reviews-section.css");
 @import url("./layout/quiz-section.css");
+@import url("./layout/gallery-section.css");
+@import url("./layout/team-section.css");
+@import url("./layout/about-section.css");
 
 /* Utilities */
 
