Create blog, blog-single and directions-single page

--- a/src/assets/styles/general/root.css
+++ b/src/assets/styles/general/root.css
@@ -4,6 +4,8 @@
 	/* Colors */
 	--clr-white: #ffffff;
 
+	--clr-light-1: #e7e7e7;
+
 	--clr-dark-1: #4d4d4d;
 	--clr-dark-2: #333333;
 	--clr-dark-3: #202020;
