--- a/src/assets/styles/components/heading.css
+++ b/src/assets/styles/components/heading.css
@@ -8,79 +8,79 @@ h4,
 .heading-2,
 .heading-3,
 .heading-4 {
+	font-family: var(--ff-accent);
 	font-weight: 400;
 	line-height: 1.1;
 	text-wrap: balance;
 }
 
 h1,
-.heading-1,
-.heading-2,
-.heading-3,
-.heading-4 {
-	margin: 0;
-}
-
-.heading-1,
-.heading-2,
-.heading-3,
-.heading-4 {
-	font-family: var(--ff-accent);
-}
-
 .heading-1 {
+	margin: 0;
 	font-size: var(--fs-heading-1-xl);
 }
 
+h2,
 .heading-2 {
 	font-size: var(--fs-heading-2-xl);
 }
 
+h3,
 .heading-3 {
 	font-size: var(--fs-heading-3-xl);
 }
 
+h4,
 .heading-4 {
 	font-size: var(--fs-heading-4-xl);
 }
 
 @media screen and (width <= 119.999em) {
+	h1,
 	.heading-1 {
 		font-size: var(--fs-heading-1-lg);
 	}
 
+	h2,
 	.heading-2 {
 		font-size: var(--fs-heading-2-lg);
 	}
 
+	h3,
 	.heading-3 {
 		font-size: var(--fs-heading-3-lg);
 	}
 }
 
 @media screen and (width <= 79.999em) {
+	h1,
 	.heading-1 {
 		font-size: var(--fs-heading-1-md);
 	}
 
+	h2,
 	.heading-2 {
 		font-size: var(--fs-heading-2-md);
 	}
 
+	h3,
 	.heading-3 {
 		font-size: var(--fs-heading-3-md);
 	}
 
+	h4,
 	.heading-4 {
 		font-size: var(--fs-heading-4-md);
 	}
 }
 
 @media screen and (width < 48em) {
+	h1,
 	.heading-1 {
 		font-size: var(--fs-heading-1-sm);
 	}
 
+	h2,
 	.heading-2 {
 		font-size: var(--fs-heading-2-sm);
 	}
