--- a/src/assets/styles/components/case-card.css
+++ b/src/assets/styles/components/case-card.css
@@ -15,6 +15,17 @@
 
 .case-card__heading {
 	margin-block-start: 0;
+	color: inherit;
+	text-decoration: none;
+	transition: all var(--transition-sm);
+}
+
+.case-card__heading:hover {
+	color: var(--clr-primary-2);
+}
+
+.case-card__heading:active {
+	color: var(--clr-primary-1);
 }
 
 .case-card__address {
