--- a/src/assets/styles/general/globals.css
+++ b/src/assets/styles/general/globals.css
@@ -44,6 +44,11 @@ dd {
 	margin-block-end: 0;
 }
 
+:where(ol:not([class]) > * + *),
+:where(ul:not([class]) > * + *) {
+	margin-block-start: 0.67em;
+}
+
 img,
 picture {
 	display: block;
