--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -27,6 +27,7 @@
 @import url("./components/blog-card.css");
 @import url("./components/callback-form.css");
 @import url("./components/article.css");
+@import url("./components/popup.css");
 
 /* Layouts */
 
